<resources>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="delete_account">Delete account</string>
    <string name="log_out">Log out</string>
    <string name="notifications">Notifications</string>
    <string name="loading">Loading</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome!</string>
    <string name="password">Password</string>
    <string name="email_hint">example@domain.com</string>
    <string name="password_hint">Minimum 8 characters</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="create_account">Create new account</string>
    <string name="free_until">Free until</string>
    <string name="timed">Timed</string>
    <string name="giveaway">Giveaway</string>
    <string name="edit_account">Edit account</string>
    <string name="rate_us">Rate us</string>
    <string name="donate">Donate</string>
    <string name="about_app">About our app</string>
    <string name="terms">Terms and conditions</string>
    <string name="share_app">Share app</string>
    <string name="open_source_libraries">Open source libraries</string>
    <string name="contact_us">Contact us</string>
    <string name="share">Share</string>
    <string name="copy_link">Copy link</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="email">E-mail</string>
    <string name="first_name_hint">John</string>
    <string name="last_name_hint">Doe</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="open_link">Open link</string>
    <string name="free_games">Free games</string>
    <string name="alerts">Alerts</string>
    <string name="sign_out">Sign out</string>
    <string name="general">General</string>
    <string name="legal_info">Legal information</string>
    <string name="gdpr">GDPR</string>
    <string name="loading_bg">Loading Budget Gamer</string>
    <string name="please_wait_dots">Please wait...</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="articles">Articles</string>
    <string name="are_you_sure_sign_out">Are you sure you want to sign out now?</string>
    <string name="add_game">Add a free game</string>
    <string name="submit">Submit</string>
    <string name="add_game_hint">Enter the game link here</string>
    <string name="instructions">Instructions</string>
    <string name="or_sign_in_with">or sign in with:\u0020</string>
    <string name="error">Error</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="please_fill_in">Please fiil in all the fields before submitting.</string>
    <string name="logging_in">Logging in</string>
    <string name="checking_user_credentials">Checking user credentials...</string>
    <string name="repeat_password">Repeat password</string>
    <string name="repeat_password_hint">Repeat your password.</string>
    <string name="password_wrong_format">Incorrect password format. Please make sure your password is at least 8 characters, contains a special character, an uppercase letter and a number.</string>
    <string name="passwords_no_match">Passwords do not match.</string>
    <string name="creating_account">Creating account...</string>
    <string name="recover_account">Recover account</string>
    <string name="recover">Recover</string>
    <string name="email_field_empty">The email field is empty.</string>
    <string name="success">Success</string>
    <string name="password_reset_send">A password reset email has been send.</string>
    <string name="description">Description</string>
    <string name="empty_field">The field is empty.</string>
    <string name="sending_link">Sending link</string>
    <string name="add_game_success">We received you submission and we will add it shortly if it\'s free.</string>
    <string name="add_game_failure">There was a problem sending the link. Please try again later.</string>
    <string name="link_wrong_format">The link provided is either in an incorrect format or is not in our supported providers\'s list.</string>
    <string name="game_denied_list">The game is either not free or not supported.</string>
    <string name="game_accepted_list">The game already exists in our database.</string>
    <string name="add_article">Add an article link</string>
    <string name="add_article_hint">Enter the article link here</string>
    <string name="article_denied_list">This link is either not valid or it is in our banned list.</string>
    <string name="article_accepted_list">This link is already in our database.</string>
    <string name="add_article_success">The link you submitted has been send. We will verify it and add it shortly.</string>
    <string name="add_article_failure">The was a problem sending the article. Please try again later.</string>
    <string name="share_app_placeholder">Grab free games.</string>
    <string name="accept">Accept</string>
    <string name="update">Update</string>
    <string name="no_games_title">There are no free games</string>
    <string name="no_games_description">Submit a game if you know a free one or try again later. You can enable notifications so that you never miss a deal. </string>
    <string name="no_articles_title">There are no articles</string>
    <string name="no_articles_description">Submit an article if you know about an active giveaway or try again later.</string>
    <string name="maintenance_title">The app is under maintenance</string>
    <string name="maintenance_description">We\'re sorry for the inconvenience and doing our best to remediate the problem. Please try again later.</string>
    <string name="update_title">The app requires the latest update</string>
    <string name="update_description">To continue using the app you need to update it to the lastest version. You can do it by clicking the button below. </string>
    <string name="loading_error_title">Loading error</string>
    <string name="loading_error_description">There was a problem loading the content for you. Please try again or contact us if the problem persists.</string>
    <string name="network_error_title">Network unavailable</string>
    <string name="network_error_description">It seems you have no internet connection. Please try again later.</string>
    <string name="release_date">Release date</string>
    <string name="developer">Developer</string>
    <string name="name">Name</string>
    <string name="name_hint">Joe Doe</string>
    <string name="name_prompt_title">Enter a display name</string>
    <string name="not_implemented_yet">Not implemented yet.</string>
    <string name="you_are_logged_with">You are logged in with:\u0020</string>
    <string name="you_can_edit_if_password">You can only edit your account info if you are logged in with a password.</string>
    <string name="delete">Delete</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat the new password</string>
    <string name="account_name_changed">Account name was changed.</string>
    <string name="email_changed">Email was changed.</string>
    <string name="password_changed">Password was changed.</string>
    <string name="account_deleted">Account was deleted.</string>
    <string name="wrong_password">The e-mail or password are incorrect. Please verify your credentials before trying again.</string>
    <string name="email_in_use">We couldn\'t create an account with the credentials you provided.</string>
    <string name="too_many_requests">Access to this account has been temporarily disabled due to too many failed login attempts.</string>
    <string name="user_not_found">We couldn\'t find any account corresponding to this e-mail. Please make sure you typed your e-mail correctly.</string>
    <string name="account_delete_question">Are you sure you want to delete your account?\nTo be able to perform this action we need to reauthenticate you.</string>
    <string name="welcome_to">Welcome to</string>
    <string name="join_our_discord">Join our Discord</string>
    <string name="version">Version </string>
    <string name="made_by">Made with ❤️ by</string>
    <string name="show_more">Show more</string>
    <string name="hide">Hide</string>
    <string name="at">at</string>
    <string name="share_app_message">Hey! I am using Budget Gamer for keeping track of the latest free games.\nDownload it from here:\u0020\n</string>
    <string name="updating_name">Updating name...</string>
    <string name="updating_email">Updating e-mail...</string>
    <string name="updating_password">Updating password...</string>
    <string name="deleting_account">Deleting your account...</string>
    <string name="error_try_again">An error has occured, please try again later.</string>
    <string name="link_copied">Link copied to clipboard.</string>
    <string name="press_back_again">Press back again to leave.</string>
    <string name="email_wrong_format">E-mail is not in the right format.</string>
    <string name="name_wrong_format">Name is not in the right format. It should contain at least 2 characters.</string>
    <string name="network_error">Network error. Please check your connection and try again.</string>
    <string name="something_went_wrong">Something went wrong, please try again.</string>
    <string name="error_updating_name">Error updating your name. Please try again.</string>
    <string name="error_updating_email">Error updating your email. Please try again.</string>
    <string name="error_updating_password">Error updating your password. Please try again.</string>
    <string name="error_deleting_account">Error deleting your account. Please try again.</string>
    <string name="no_login_text">You are in guest mode. If you want to get alerts and submit free games or ongoing giveaways click here to register or sign in.</string>
    <string name="no_login_add_link">You are not logged in. To be able to submit links you need an account. Would you like to go to the authentication page?</string>
    <string name="notifications_saving_options">Saving your notification preferences...</string>
    <string name="notifications_saved">Your notification preferences have been successfully saved.</string>
    <string name="notifications_not_saved">You did not save your changes. Do you want to go back?</string>
    <string name="attention">Attention</string>
    <string name="follow_devs">Follow the dev team</string>
    <string name="notification_title">Free to keep: %1$s</string>
    <string name="notification_description">Get it from: %1$s</string>
    <string name="enable_notifications">Enable all notifications</string>
    <string name="open_settings">Open Settings</string>
    <string name="notifications_disabled_popup">You have your notifications disabled. You need to allow them from the system settings. Would you like to open settings?</string>
    <string name="notifications_disabled">Notifications are disabled. You need to enable them from the settings.</string>
    <string name="change_name">Change name</string>
    <string name="change_email">Change e-mail</string>
    <string name="change_password">Change password</string>
    <string name="error_valid_password">Please enter a valid password.</string>
    <string name="error_valid_name">Please enter a valid name.</string>
    <string name="error_fields_empty">Please fill all fields before attempting to continue.</string>
    <string name="error_valid_email">Please enter a valid email.</string>
    <string name="error_valid_text">Please enter a valid text.</string>
    <string name="error_password_empty">The password field is empty.</string>
</resources>