<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".presentation.fragments.auth.RegisterFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/activity_register_bar"
        style="@style/MyTopAppBar.Back"
        android:background="@color/colorBackground"
        app:title="@string/create_account" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/screen_margin"
        android:layout_weight="1"
        android:fillViewport="true"
        android:orientation="vertical"
        android:scrollbars="none"
        app:layout_constraintWidth_max="@dimen/max_width">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyInputLayout"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_register_name"
                    style="@style/MyTextInput"
                    android:autofillHints="name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyInputLayout"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_register_mail"
                    style="@style/MyTextInput"
                    android:autofillHints="emailAddress"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyInputLayout"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/show_password_selector">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_register_password"
                    style="@style/MyTextInput"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyInputLayout"
                android:hint="@string/repeat_password"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/show_password_selector">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_register_password_repeat"
                    style="@style/MyTextInput"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity_register_submit"
        style="@style/MyButton"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginEnd="@dimen/screen_margin"
        android:layout_marginBottom="@dimen/screen_margin"
        android:text="@string/register" />

</LinearLayout>