<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true"
    tools:context=".presentation.activities.NotificationsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/notifications_activity_bar"
        style="@style/MyTopAppBar.Back"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        app:title="@string/alerts" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/notifications_activity_all"
        style="@style/MySwitch"
        android:layout_below="@id/notifications_activity_bar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/screen_margin"
        android:layout_marginTop="@dimen/screen_margin"
        android:layout_marginBottom="@dimen/screen_margin"
        android:background="@drawable/card_background"
        android:text="@string/enable_notifications"
        android:visibility="gone"
        app:layout_constraintWidth_max="@dimen/max_width" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/notifications_activity_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/notifications_activity_bar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/screen_margin"
        android:layout_marginTop="@dimen/screen_margin"
        android:layout_marginBottom="@dimen/screen_margin"
        android:background="@drawable/card_background"
        android:padding="@dimen/screen_margin"
        android:text="@string/notifications_disabled"
        android:textSize="16sp"
        app:layout_constraintWidth_max="@dimen/max_width" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/notifications_activity_button"
        style="@style/MyButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/screen_margin"
        android:text="@string/open_settings" />

</RelativeLayout>