<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".presentation.fragments.auth.ForgotPasswordFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/fragment_forgot_password_bar"
        style="@style/MyTopAppBar.Back"
        android:background="@color/colorBackground"
        app:title="@string/recover_account" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginTop="@dimen/screen_margin"
        android:layout_marginEnd="@dimen/screen_margin"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/MyInputLayout"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_forgot_password_mail"
                style="@style/MyTextInput"
                android:autofillHints="emailAddress"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/WeightLinearLayout"
        android:layout_gravity="center" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_forgot_password_submit"
        style="@style/MyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/screen_margin"
        android:text="@string/recover" />

</LinearLayout>